# hannah

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  Makefile.macOS  README.md  actions.go  go.mod  go.sum  hannah.pro  macOS.sh  main.go  resolve-dns-in-china.sh
.github/workflows/: build.yml  go-linux.yml  go-mac.yml  go-win.yml  go.tidy.yml  go.yml
action/: action.go  action_test.go  download.go  hot.go  m3u.go  play.go  playlist.go  search.go
bass/: bass_windows.go
bass/macOS/lib/plugins/: libbass_spx.dylib  libbassflac.dylib  libbasshls.dylib  libtags.dylib
browser/chrome/: background.js  manifest.json
browser/chrome/_locales/en/: messages.json
browser/chrome/_locales/zh_CN/: messages.json
browser/firefox/: background.js  manifest.json
browser/firefox/_locales/en/: messages.json
cache/: redis.go
cmd/hannah/: main.go
cmd/reverseProxy/: main.go
config/: cfg_bsd.go  cfg_darwin.go  cfg_linux.go  cfg_mac.go  cfg_windows.go  config.go  config_test.go
desktop/: CMakeLists.txt  Hannah.rc  application.cpp  application.h  comboboxdelegate.cpp  configurationwindow.cpp  configurationwindow.h  configurationwindow.ui  desktop.pro  externalreverseproxyrunner.cpp  externalreverseproxyrunner.h  hannah.icns  hannah.qrc  macInfo.plist  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.h  parsercsv.cpp  parserm3u.cpp  parserpls.cpp  parserpls.h  playlistmanagewindow.cpp  playlistmanagewindow.h  playlistmanagewindow.ui  playlistmodel.cpp  protocolUri.reg  qmldialog.cpp  qmlplayer.cpp  qmlplayer.h  service.h  service.mm  serviceslots.h  songlistmodel.cpp  songlistmodel.h  sqlite3helper.cpp  sqlite3helper.h  trackfile.cpp  trackfile.h
desktop/BeastServer/: BeastHttpResponseHandler.cpp  BeastHttpResponseHandler.h  BeastHttpSession.cpp  BeastHttpSession.h  BeastServer.cpp  BeastServer.h  BeastServerRunner.cpp  BeastServerRunner.h  BeastWebsocketSession.cpp  BeastWebsocketSession.h  BeastWebsocketSessionManager.cpp  BeastWebsocketSessionManager.h  UrlQuery.cpp  UrlQuery.h
desktop/ProviderAPI/: kugou.cpp  kugou.h  kuwo.cpp  kuwo.h  migu.cpp  migu.h  netease.cpp  netease.h  qq.cpp  qq.h
desktop/model/: playlistmodel.h  songlistmodel.cpp  songlistmodel.h
desktop/network/: networkreplyhelper.cpp  networkreplyhelper.h
desktop/parser/: parser.cpp  parsercsv.h  parserm3u.h
desktop/player/: FlacPic.h  ID3v2Pic.h  bassplayer.cpp  bassplayer.h  fftdisplay.cpp  fftdisplay.h  lrcbar.cpp  lrcbar.h  lrcbar.ui  lyrics.cpp  lyrics.h  osd.cpp  osd.h  osd.ui  player.cpp  player.h  playlist.cpp  playlist.h  playlist.ui  qmlplayer.cpp  qmlplayer.h  shadowlabel.cpp  shadowlabel.h  shadowplayer.cpp  shadowplayer.h  shadowplayer.ui  spslider.cpp  spslider.h  tags.h
desktop/qtsingleapplication/: qtlocalpeer.cpp
desktop/rc/: runInTerminal.app.scpt
desktop/rc/qml/: musicplayer.qml
desktop/sqlite/: Sqlite3Constants.h  Sqlite3DBManager.cpp  Sqlite3DBManager.h  Sqlite3Helper.cpp  Sqlite3Helper.h  Sqlite3Statement.cpp  Sqlite3Statement.h
desktop/translations/: Hannah_zh_CN.ts
desktop/ui/: comboboxdelegate.h  configurationwindow.cpp  configurationwindow.h  configurationwindow.ui  qmldialog.h  qmldialog.ui
handler/: decoder.go  media.go
input/: source.go
lib/: CMakeLists.txt
lib/reverseProxy/: CMakeLists.txt  build-x64.bat  build-x86.bat  main.go  rp.dll.rc  update-def.sh
lyric/: converter.go  lrc.go  xtrc.go
macOS/: faad2.pc  macOS.sh
media/: decoder.go  decoder_test.go  download.go  m3u.go  media.go
media/decode/: builtin.go  builtin_test.go  faad.go  mpg123.go  mpg123_nix.go  mpg123_windows.go
media/decode/faad/: faacdecoder.c  faacdecoder.h  faad.go
media/decode/mpg123/: mpg123.go  mpg123.h  mpg123_nix.go  mpg123_windows.go  reader.go
output/: panel.go  speaker.go
output/bass/: bass.go  bass_darwin.go  bass_windows.go  bass_windows_386.go  bass_windows_amd64.go  bassasio.go  bassasio_windows_386.go  bassasio_windows_amd64.go  bassmix.go  bassmix_windows_386.go  bassmix_windows_amd64.go  bassplugins.go  basswadsp.go  basswasapi.go  basswasapi_windows_386.go  basswasapi_windows_amd64.go  basswinamp.go  bridge.go  format.go  speaker.go
output/bass/include/: BASS_WADSP.h  BassWinamp.h
output/bass/lib/darwin/amd64/plugins/: libbass.dylib  libbass_vst.dylib  libbasshls.dylib  libbassopus.dylib  libbasswebm.dylib
output/bass/lib/macOS/plugins/: libbass_ape.dylib
output/bass/lib/windows/: bass.def
output/bass/lib/windows/x86/: bass.def
output/bass/macOS/lib/plugins/: libbass_ac3.dylib  libbass_tta.dylib  libbassdsd.dylib  libbassmix.dylib  libbassopus.dylib
output/beep/: format.go  speaker.go
provider/: bilibili.go  bilibili_test.go  kugou.go  kugou_test.go  kuwo.go  kuwo_test.go  migu.go  migu_test.go  musictool.go  musictool_test.go  netease.go  netease_test.go  provider.go  provider_test.go  qq.go  qq_test.go  xiami.go  xiami_test.go
registerProtocolHandler/: CMakeLists.txt  main.cpp  manifest.rc  registerProtocolHandler.pro  registerProtocolHandler.rc
rp/: album.go  artist.go  inchina.go  inchina_test.go  info.go  inlan.go  inlan_test.go  limit.go  m3ulink.go  playlist.go  reverseproxy.go  search.go  song.go
util/: conv.go  conv_test.go  http.go  json.go  linkpattern.go  player.go  rand.go  types.go
util/cryptography/: aes.go  crypto.go  cryptography.go  des.go  rsa.go
